src/objects/FSTR__PCE_Definition_Initiator__c.object
<CustomObject>
    <customHelpPage>FSTR__PCEHelp</customHelpPage>
    <description>This object is used to store information for the execution of Definitions when data on other objects changes.  This is called Cross Object Process Initiation.</description>
    <fields>
        <fullName>FSTR__Assign_Process_Object_By__c</fullName>
        <description>This field determines who the generated object should be assigned to.</description>
        <inlineHelpText>This field determines who the generated object should be assigned to.</inlineHelpText>
        <label>Assign Process Object By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Executing User</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Salesforce Account Team Role</fullName>
                </value>
                <value>
                    <fullName>Process Team Role</fullName>
                </value>
                <value>
                    <fullName>Monitored Object Owner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FSTR__Due_Date_Adjustment__c</fullName>
        <description>Numbers of days after the process is kicked off that it will be due.  This only applies for Definitions attached to  the Business Process and Custom objects.</description>
        <inlineHelpText>Numbers of days after the process is kicked off that it will be due.  This only applies for Definitions attached to  the Business Process and Custom objects.</inlineHelpText>
        <label>Due Date Adjustment</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Initiation_Criteria__c</fullName>
        <label>Initiation Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Monitored_Object__c</fullName>
        <description>This is the object to be monitored.</description>
        <inlineHelpText>This is the object to be monitored.</inlineHelpText>
        <label>Monitored Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>account</fullName>
                </value>
                <value>
                    <fullName>contact</fullName>
                </value>
                <value>
                    <fullName>event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Monitored_Operations__c</fullName>
        <description>Select the operations that will initiate the associated Definition</description>
        <inlineHelpText>Select the operations that will initiate the associated Definition</inlineHelpText>
        <label>Monitored Operation(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Record Matches Criteria - Button Click</fullName>
                </value>
                <value>
                    <fullName>Record Matches Criteria - Daily Check</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSTR__Number_of_Initiator_Criteria__c</fullName>
        <label>Number of Initiator Criteria</label>
        <summaryForeignKey>FSTR__PCE_Definition_Initiator_Criteria__c.FSTR__PCE_Definition_Initiator__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FSTR__Obj_Data_1__c</fullName>
        <description>data of stored object</description>
        <inlineHelpText>data of stored object</inlineHelpText>
        <label>Obj Data 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Obj_Data_2__c</fullName>
        <description>extended object data stored</description>
        <inlineHelpText>extended object data stored</inlineHelpText>
        <label>Obj Data 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Definition__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This is the definition that will execute when the rules defined in this object are true.</description>
        <inlineHelpText>This is the definition that will execute when the rules defined in this object are true.</inlineHelpText>
        <label>Definition to Initiate</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipLabel>Definition Initiators</relationshipLabel>
        <relationshipName>PCE_Definition_Initiators</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Object_Owner_Queue__c</fullName>
        <inlineHelpText>If the Assign Process Object By field is set to Queue this is the field that indicates the queue.</inlineHelpText>
        <label>Process Object Owner Queue</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Object_Owner_Role__c</fullName>
        <inlineHelpText>If the Assign Process Object By field is set to Role this is the field that indicates the role.</inlineHelpText>
        <label>Process Object Owner Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Object_Owner_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the Assign Process Object By field is set to User this is the field that indicates that user.</inlineHelpText>
        <label>Process Object Owner User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PCE_Definition_Initiators</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Definition Initiator</label>
    <listViews>
        <fullName>FSTR__All</fullName>
        <columns>NAME</columns>
        <columns>FSTR__PCE_Definition__c</columns>
        <columns>FSTR__Monitored_Object__c</columns>
        <columns>FSTR__Monitored_Operations__c</columns>
        <columns>FSTR__Initiation_Criteria__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Definition Initiator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Definition Initiators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>